--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
-.idea/
-.vscode/
-run/
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea/*
+!.idea/codeStyles
+!.idea/copyright
+
+# gradle
 build/
+gradle.properties
 .gradle/
+
+# other
+eclipse
+run
+.vscode
+infer-out/
+ciwork/
+.DS_STORE
 
